css/obBase.css
/* ... */
.btn .postConfirm {
  max-width: 0;
  width: 0;
  opacity: 0;
}

.btn .preSpacer {
  /*this keeps the width the same as the preconfirm is shrinking*/
  display: block;
  height: 0;
}

.confirm.btn .preConfirm {
  max-width: 0;
  opacity: 0;
}

.confirm.btn .postConfirm {
  max-width: 200px;
  width: auto;
  opacity: 1;
}

.btn-secondary {
  background-color: #327EB8;
}

#ov1 .confirm.btn,
#ov1 #userPage .confirm.btn {
  background-color: rgba(200,25,25,1);
}

.labelWrap {
  display: block;
  background: rgba(0,0,0,0.6);
  padding: 4px 4px 7px 52px;
  height: 44px;
  border-radius: 6px;
  box-sizing: border-box;
  border: 1px solid rgba(255,255,255,0.2);
  color: rgba(255,255,255,0.6);
  transition: opacity 1s;
}

.labelWrap.fade {
  opacity: 0;
}

.labelWrap.fadeIn {
  opacity: 1;
}

label {
  font-size: 14px;
  letter-spacing: .4px;
  opacity: .75;
}

.labelWrap input {
  margin-top: 2px;
  color: rgba(255,255,255,0.6);
  background: none;
  font-size: 12px;
  width: 100%;
}

.fieldItem h1,
.fieldITem h2,
.fieldItem h3,
.fieldItem h4,
.fieldItem h5,
.fieldItem h6 {
  margin: 0;
}

input[type="text"].fieldItem,
input[type="number"].fieldItem,
input[type="email"].fieldItem,
input[type="file"].fieldItem,
input[type="url"].fieldItem,
input[type="password"].fieldItem,
input[type="datetime-local"].fieldItem {
  background: none;
  border: 2px solid transparent;
  color: #fff;
  width: 100%;
}

input[type="datetime-local"].fieldItem {
  font-family: inherit;
  line-height: 42px;
  padding-top: 0;
  padding-bottom: 0;
}

input[type="datetime-local"].fieldItem::-webkit-inner-spin-button {
  height: 50px;
  position: absolute;
  right: 45px;
}

input[type="datetime-local"].fieldItem::-webkit-clear-button {
  -webkit-appearance: none;
  display: none;
}

input[type="datetime-local"].fieldItem::-webkit-calendar-picker-indicator {
  padding: 10px;
  opacity: .75;
}

input[type="datetime-local"].fieldItem::-webkit-calendar-picker-indicator:hover {
  opacity: 1;
  background: transparent;
  cursor: pointer;
}


input[type="number"].fieldItem {
  padding-right: 0;
}

input[type="number"].fieldItem::-webkit-outer-spin-button,
input[type="number"].fieldItem::-webkit-inner-spin-button,
.noNumberSpinner {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
}

input[type="text"].fieldItem:focus,
input[type="number"].fieldItem:focus,
input[type="email"].fieldItem:focus,
input[type="url"].fieldItem:focus,
input[type="password"].fieldItem:focus,
input[type="datetime-local"].fieldItem:focus {
  border: 2px solid #fff;
  transition: border 0.3s;
}

.txtAreaField:focus {
  outline: 1px solid #565656;
}

input[type="text"].fieldItem.fieldItem-withButton,
input[type="email"].fieldItem.fieldItem-withButton,
input[type="url"].fieldItem.fieldItem-withButton,
input[type="number"].fieldItem.fieldItem-withButton {
  position: absolute;
  padding-left: 50px;
}

.numberSpinnerUp,
.numberSpinnerDown {
  cursor: pointer;
  width: 18px;
  position: absolute;
  right: 0;
  box-sizing: border-box;
  font-family: "Ionicons";
  color: #fff;
  font-size: 14px;
  text-align: center;
  line-height: 20px;
  background-color: rgba(140,140,140,0.2);
  margin: 4px;
}

.numberSpinnerUp {
  top: 0;
}

.numberSpinnerUp:before {
  content: "\f10d";
}

.numberSpinnerDown {
  bottom: 0;
}

.numberSpinnerDown:before {
  content: "\f104";
}

.fieldItem .btn {
  margin-top: 9px;
}

.fieldItem .fieldItem-selectWrapper {
  position: absolute;
  width: 100%;
}

.fieldItem .fieldItem-selectWrapper select {
  width: 100%;
  height: 50px;
  line-height: 50px;
  margin: 0;
  background: none;
  border: 1px solid transparent;
  outline: none;
  box-sizing: border-box;
  appearance: none;
  -webkit-appearance: none;
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper select:focus {
  outline: none;
}

.fieldItem .fieldItem-selectWrapper select[multiple] {
  height: 150px;
}

.fieldItem .fieldItem-selectWrapper select[multiple]:focus {
  height: 500px;
}

.fieldItem .fieldItem-selectWrapper:after {
  content: "\f104";
  font-family: "Ionicons";
  position: absolute;
  line-height: 50px;
  top: 0;
  right: 20px;
  pointer-events: none;
}

.fieldItem .fieldItem-selectWrapper.noIcon:after {
  content: "";
}

/* custom chosen styles */
.fieldItem .fieldItem-selectWrapper .chosen-single {
  height: 50px;
  background: none;
  border: none;
  border-radius: 0;
  box-shadow: none;
  line-height: 50px;
  color: #fff;
  opacity: 1;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single div b,
.fieldItem .fieldItem-selectWrapper .chosen-container-single span b {
  background: none;
  height: 0;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single div b:after {
  content: "\f104";
  font-family: "Ionicons";
  position: absolute;
  line-height: 50px;
  top: 0;
  right: 20px;
  pointer-events: none;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single.chosen-container-active div b:after {
  content: "\f10d";
}

.fieldItem .fieldItem-selectWrapper .chosen-drop {
  background: #353535;
  border: 1px solid rgba(255,255,255,0.08);
  border-radius: 0;
  box-shadow: none;
  line-height: 50px;
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper.chosen-relative .chosen-with-drop .chosen-drop {
  position: relative;
}

.fieldItem .fieldItem-selectWrapper .chosen-drop .chosen-results li {
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper .chosen-drop .chosen-results li.highlighted {
  background: rgb(87,87,87);
}

.chosen-container-single .chosen-single span {
  padding-left: 10px;
  font-size: 14px;
  font-weight: 400;
}

.chosen-container .chosen-results {
  padding: 0;
}

.chosen-container-multi .chosen-choices {
  background: none;
}

.fieldItem-textarea {
  padding: 15px;
  border: 2px solid transparent;
  color: #fff;
  overflow: auto; /* use customThemeScrollbar to add a scrolbar */
}

.fieldItem-textarea:focus {
  border: 2px solid #fff;
  transition: border 0.3s;
  outline: none;
}
/* ... */

